--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
-    "require": {
-        "guzzle/guzzle": "~3.1.2"
+  "require": {
+    "guzzle/guzzle": "~3.7"
+  },
+  "autoload": {
+    "psr-0": {
+      "Util": ["php-radutils/"]
     }
+  }
 }
